Bug 369783 - contents/ui/KickoffItem.qml:218:19: Unable to assign [undefined] to QString
Summary: contents/ui/KickoffItem.qml:218:19: Unable to assign [undefined] to QString
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-03 19:20 UTC by Elias Probst
Modified: 2017-01-09 14:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2016-10-03 19:20:06 UTC
plasmashell logs a few hundreds of this line every now and then:

file:///usr/share/plasma/plasmoids/org.kde.plasma.kickoff/contents/ui/KickoffItem.qml:218:19: Unable to assign [undefined] to QString

I can reproduce this by launching Thunderbird 45.4.0 from my Kickoff favorites, but I think I've seen it in a few other cases (I couldn't clearly reproduce yet) too.

Although this could be easily fixed by this:
--- a/applets/kickoff/package/contents/ui/KickoffItem.qml
+++ b/applets/kickoff/package/contents/ui/KickoffItem.qml
@@ -215,7 +215,7 @@ Item {
             }
             height: paintedHeight
 
-            text: model.description
+            text: model.description || ""
             opacity: isCurrent ? 0.6 : 0.3
             font.pointSize: theme.smallestFont.pointSize
             elide: Text.ElideMiddle


â€ĶI feel like the root cause is actually within the model where the description isn't handled correctly (but to fix that is beyond my knowledge).
Comment 1 David Edmundson 2017-01-09 14:00:39 UTC
Git commit 4b46112a59cbd3046f0682ef7dba3e12bfb13197 by David Edmundson.
Committed on 09/01/2017 at 14:00.
Pushed by davidedmundson into branch 'master'.

Return valid string value for DescriptionRole in all models

Summary:
A qml binding converting an empty QVariant to a string value will result
in a warning:
Unable to assign [undefined] to QString

Which is apparently happening to this bug reporter, but not for other
roles.

Grepping all models shows 2 code paths where this could happen.

Test Plan:
Kickoff/Kicker still open
Couldn't reproduce the original bug.

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: hein, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4033

M  +2    -0    applets/kicker/plugin/computermodel.cpp
M  +2    -0    applets/kicker/plugin/recentcontactsmodel.cpp

https://commits.kde.org/plasma-desktop/4b46112a59cbd3046f0682ef7dba3e12bfb13197