Return valid string value for DescriptionRole in all models

Summary:
A qml binding converting an empty QVariant to a string value will result
in a warning:
Unable to assign [undefined] to QString

Which is apparently happening to this bug reporter, but not for other
roles.

Grepping all models shows 2 code paths where this could happen.

BUG: 369783

Test Plan:
Kickoff/Kicker still open
Couldn't reproduce the original bug.

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: hein, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4033