applets/kicker/plugin/computermodel.cpp
@@ -219,6 +219,8 @@ QVariant ComputerModel::data(const QModelIndex &index, int role) const
 
                 if (access) {
                     return access->filePath();
+                } else {
+                    return QString();
                 }
             } else {
                 const QUrl &url = m_filteredPlacesModel->url(sourceIndex);
